[package]
name = "qmc"
version = "2.4.2"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
edition = "2018"
description = "Quantum Monte Carlo simulations in Rust"
documentation = "https://docs.rs/qmc/"
repository = "https://github.com/Renmusxd/IsingMonteCarlo"
license = "MIT"

[features]
default = []
autocorrelations = ["rayon", "rustfft"]
const_generics = ["smallvec/const_generics"]
nightly = ["smallvec/specialization", "smallvec/union", "const_generics"]
tempering = ["itertools"]
parallel-tempering = ["rayon", "tempering"]
serialize = ["serde", "rand/serde1", "smallvec/serde"]

[dev-dependencies]
rand = {version = "^0.7", features = ["small_rng"]}
serde_json = "^1.0"
rand_isaac = {version = "^0.2", features = ["serde1"]}

[dependencies]
rand = "^0.7"
smallvec = "^1.4"
itertools = {version = "^0.9", optional = true}
rayon = {version = "^1.3", optional = true}
serde = {version = "^1.0", optional = true, features = ["derive"]}
rustfft = {version = "^3.0", optional = true}